--- a/style.css
+++ b/style.css
@@ -287,7 +287,7 @@ height: auto;
 }
 
 .map p{
-  line-height: 25px;
+  line-height: 1rem;
   font-size: 14px;
  
 }
@@ -318,6 +318,7 @@ height: auto;
 
 .contact-social-icons i {
   color: #6bc329;
+  margin-top: 15px;
 }
 
 .contact-social-icons i:hover {
