--- a/style.css
+++ b/style.css
@@ -442,9 +442,15 @@ figcaption {
   gap: 30px;
 }
 
-.all-location-container div {
+.each-location{
 
   border: 2px solid red;
+  text-align: center;
+  padding: 5px 20px 50px;
+}
+
+.each-unit-box {
+  border: 1px solid violet;
 }
 
 
