--- a/style.css
+++ b/style.css
@@ -421,15 +421,18 @@ figcaption {
   background-color: #f0f0f0;
   margin-top: -5px;
   padding: 50px 3%;
+  
 }
 
 .meet-up-locations h1 {
   text-align: center;
   color: #6bc329;
+  text-transform:capitalize;
   font-family: Raleway;
   font-size: 26px;
   font-weight: 1000;
   overflow-wrap:break-word;
+  margin-bottom: 50px;
  
 }
 
@@ -444,32 +447,84 @@ figcaption {
 
 .each-location{
 
-  border: 2px solid red;
+  border-radius: 5px;
+  background-color: #ffffff;
+  box-shadow: 0px 12px 12px -6px black;
   text-align: center;
   padding: 5px 20px 50px;
   height: fit-content;
+  
 }
 
+.hidden-content h4 {
+
+  color: #6bc329;
+  font-size: 15.5px;
+  font-weight: 800;
+  letter-spacing: 2px;
+}
+
+.units-map-btn {
+  background-color:  #6bc329;
+  margin: 20px auto;
+  border: none;
+  color: #ffffff;
+  padding:  10px 20px;
+  border-radius: 2px;
+}
+
+.units-map-btn:hover {
+  
+  background-color: #296a12;
+}
+
+
 .Geo-Address {
-  border: 2px solid yellowgreen;
+  border: 1px solid #f0f0f0;
+  background-color: #f0f0f0;
+  border-radius: 5px;
+  color: rgba(56, 56, 56);
+  cursor: pointer;
+  
+  
+}
+
+.Geo-Address:hover {
+  background-color:#6bc329;
+}
+
+  .each-location-units{
+    box-shadow: 0px 0px 10px #848484;
+    border-radius: 5px;
+   
 }
 
 .Geo-Address span {
   float: right;
   transform: rotate(-180deg);
   transition: all ease 0.5s;
-  color: #296a12
+  
 
 }
 
 .each-unit-box {
-  border: 1px solid violet;
+  border: 2px solid #ffffff;
   margin-top: -1px;
+  
+  
 }
 
 .hidden-content{
   display: none; 
   transition: all ease 3s;
+  padding: 2px 2%;
+  font-size: 14px;
+}
+
+.hidden-content p {
+  margin-bottom: -5px;
+  color: rgba(56, 56, 56);
+
 }
 
 
