--- a/style.css
+++ b/style.css
@@ -273,22 +273,24 @@ height: auto;
 
   .map ul { 
   /* border: 3px solid ; */
-  padding-left: 15px;
+  padding-left: 16px;
   box-sizing: border-box;
 }
 
 .map li {
 
   list-style:square;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 25px;
   color: rgba(56, 56, 56);
 
 }
 
+
 .map p{
   line-height: 1rem;
-  font-size: 14px;
+  font-size: 16px;
+  margin-top: -4px;
  
 }
 .map img {
@@ -307,6 +309,7 @@ height: auto;
   font-size: 26px;
   font-weight: 1000;
   font-family: Raleway;
+  text-shadow: 0px 0px 1px black;
  }
 
 
@@ -318,7 +321,7 @@ height: auto;
 
 .contact-social-icons i {
   color: #6bc329;
-  margin-top: 15px;
+  margin-top: 25px;
 }
 
 .contact-social-icons i:hover {
@@ -369,7 +372,7 @@ figcaption {
   margin-top: -10px;
   border: 1px solid rgba(117, 117, 117);
   padding: 3px 2%;
-  font-size: 14px;
+  font-size: 16px;
   color: rgba(117, 117, 117);
   border-radius: 5px;
 }
@@ -385,7 +388,7 @@ figcaption {
   border: 1px solid rgba(117, 117, 117);
   padding: 10px 2%;
   line-height: 2rem;
-  font-size: 14px;
+  font-size: 16px;
   color: rgba(56, 56, 56);
   /* word-wrap: break-word; */
   box-sizing: border-box;
@@ -433,6 +436,7 @@ figcaption {
   font-weight: 1000;
   overflow-wrap:break-word;
   margin-bottom: 50px;
+  text-shadow: 0px 0px 1px black;
  
 }
 
@@ -449,33 +453,44 @@ figcaption {
 
   border-radius: 5px;
   background-color: #ffffff;
-  box-shadow: 0px 12px 12px -6px black;
+  box-shadow: 0px 12px 12px -8px black;
   text-align: center;
   padding: 5px 20px 50px;
   height: fit-content;
   
 }
 
+.each-location h3{
+  
+  color: rgba(56, 56, 56);
+  font-size: 18px;
+}
+
 .hidden-content h4 {
 
   color: #6bc329;
-  font-size: 15.5px;
-  font-weight: 800;
+  font-size: 16px;
+  font-weight: 700;
+  text-shadow: 0px 0px 1px black;
   letter-spacing: 2px;
+  font-family: Raleway;
 }
 
 .units-map-btn {
-  background-color:  #6bc329;
+  background-color:  #296a12;
   margin: 20px auto;
+  color: white;
+  font-weight: bold;
+  padding: 10px 20px;
   border: none;
-  color: #ffffff;
-  padding:  10px 20px;
-  border-radius: 2px;
+  box-sizing: border-box;
+  text-transform: uppercase;
+  border-radius: 7px;
 }
 
 .units-map-btn:hover {
   
-  background-color: #296a12;
+  background-color: #6bc329;
 }
 
 
@@ -485,6 +500,7 @@ figcaption {
   border-radius: 5px;
   color: rgba(56, 56, 56);
   cursor: pointer;
+  padding: 0px 5%;
   
   
 }
@@ -494,7 +510,7 @@ figcaption {
 }
 
   .each-location-units{
-    box-shadow: 0px 0px 10px #848484;
+    box-shadow: 0px 0px 0px 0.2px #848484;
     border-radius: 5px;
    
 }
@@ -539,7 +555,7 @@ figcaption {
 
 .contact-us {
     display: flex;
-    padding: 60px 12%;
+    padding: 60px 4%;
     gap: 2%;
 }
 
@@ -622,7 +638,7 @@ figcaption {
 
 footer {
     display: flex;
-    padding: 0px 12%;
+    padding: 0px 4%;
     justify-content: space-between;
     /* border: 3px solid goldenrod; */
     align-items: center;
@@ -720,16 +736,7 @@ footer p{
     }
 
   
-    .all-photos{ 
-
-      padding: 50px 3% 150px;
-
-         }
-
-         .all-photos-Events{
-          padding: 50px 3% 100px;
-        }
-
+   
 
 
 }
@@ -788,7 +795,7 @@ footer p{
 
 
     .contact-us {
-        padding: 60px 5%;
+        padding: 60px 4%;
     }
 
     
@@ -796,7 +803,7 @@ footer p{
             footer {
                 
                 flex-direction: column-reverse;
-                padding: 10px 5% 30px;
+                padding: 10px 4% 30px;
                 column-gap: -15px;
                 align-items: flex-start;
                 gap: 5%;
@@ -810,32 +817,7 @@ footer p{
          /* next breakpoint query */
     @media (max-width: 380px) {
 
-        .all-photos{ 
-
-          grid-template-columns: repeat(auto-fit, minmax( 100%, 1fr));
-          grid-auto-rows: 220px;
-    
-             }
-    
-             .all-photos-Events{
-              grid-template-columns: repeat(auto-fit, minmax( 100%, 1fr));
-              grid-auto-rows: 250px;
-            }
-
-            .all-photos-Events img{ 
-              max-height: 250px;}
-
-              .ih-item img {
-                width: 100%;
-                height: 100%;
-                min-height: 200px;
-              }
-              
-              .ih-item.square {
-              
-                max-height: 200px;
-                max-width: 100%;
-              }
+        
 
               .form-and-map{
                 padding: 50px 3%;
@@ -876,39 +858,7 @@ footer p{
                 overflow-x: hidden;
             }
 
-         .all-photos-Events img{
-            height: auto;
-            width: 100%;
-            }
-            
-            .ih-item img {
-              width: 100%;
-              height: 100%;
-              min-height: auto;
-            }
-            
-            .ih-item.square {
-              
-              max-height: 195px;
-              max-width: 100%;
-            }
-
-            
-
-}
-
-@media (max-width: 300px) {
-
-  .all-photos{ 
-    gap: 1px;
-  }
-
-  .ih-item.square {
-              
-    max-height: 160px;
-    max-width: 100%;
-  }
-
+        
 
 }
 
@@ -920,23 +870,11 @@ footer p{
     }
 
 
-    .ih-item.square {
-              
-      max-height: 130px;
-      max-width: 100%;
-    }
-  
-
-
         .social-icons div {
             width: auto;
             height: auto;
         }
 
-        .we-are-change-agents{
-            height: 500px;
-            
-        }
 
 
 
